# fin-agent

./: .dockerignore  .env.template  .gitignore  Dockerfile  README.md  docker-compose.prod.yaml  docker-compose.yml  pyproject.toml  requirements.txt  run.sh
.github/: labeler.yml
.github/workflows/: ci.yml  deployment-prod.yml.bak  deployment.yml.bak  simple-deploy.yml
src/meta_supervisor/: config.py  dependencies.py  main.py  schemas.py  simple_logging.py
src/meta_supervisor/clients/: base_client.py  market_client.py  trading_client.py
src/meta_supervisor/routers/: api.py
src/meta_supervisor/services/: agent_service.py  market_analysis_service.py  nlu_service.py  routing_service.py  trading_service.py
src/meta_supervisor/tools/: __init__.py  base_tool.py  market_analysis_tool.py  trading_tool.py
tests/: conftest.py  test_api_endpoints.py  test_basic.py  test_logging_middleware.py
