[project]
name = "meta-supervisor"
version = "0.1.0"
description = "Meta-supervisor for Fin-Agent"
authors = [{ name = "FinAgent-Lab", email = "dev@finagent.com" }]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.116.0",
    "httpx>=0.28.1",
    "konlpy>=0.6.0",
    "langchain>=0.3.26",
    "langchain-mcp-adapters>=0.1.9",
    "langchain-openai>=0.3.28",
    "langgraph>=0.5.2",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.1.1",
    "uvicorn[standard]>=0.35.0",
]

[tool.uv]
dev-dependencies = [
    "pytest",
    "pytest-asyncio",
    "black",
    "ruff"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"] 
